sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: type mismatch;
 found   : Boolean
 required: Int
	while ( x !== 0 ) {
                  ^